force-app/main/default/objects/Tableau_Viz_Definition__mdt/Tableau_Viz_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Root level definition for Tableau Viz by object</description>
    <label>Tableau Viz Definition</label>
    <pluralLabel>Tableau Viz Definitions</pluralLabel>
</CustomObject>