force-app/main/default/objects/Tableau_Viz_Definition__mdt/fields/Default_Worksheet__c.field-meta.xml
<CustomField>
    <fullName>Default_Worksheet__c</fullName>
    <description>If set, open a specific worksheet.  Otherwise, use the default worksheet.</description>
    <inlineHelpText>If set, open a specific worksheet.  Otherwise, use the default worksheet.</inlineHelpText>
    <label>Default Worksheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>