force-app/main/default/objects/Tableau_Viz_Definition__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Object Name where this definition will be available</description>
    <inlineHelpText>Object Name where this definition will be available</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>